# phenotips

LLM-Pedigree-Builder/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
LLM-Pedigree-Builder/.github/workflows/: ci.yml
LLM-Pedigree-Builder/apps/: clinician_app.py  patient_app.py
LLM-Pedigree-Builder/docs/: ethical_guidelines.md
LLM-Pedigree-Builder/examples/: sample_pedigree.json
LLM-Pedigree-Builder/scripts/: run_local.sh
LLM-Pedigree-Builder/src/: __init__.py  analysis_engine.py  data_extractor.py  llm_chat.py  output_generator.py  pedigree_builder.py
LLM-Pedigree-Builder/tests/: test_llm_and_analysis.py  test_pedigree_builder.py
