[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-pedigree-builder"
version = "0.1.0"
description = "Local-first LLM-powered pedigree builder and clinician analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
authors = [{name = "LLM-Pedigree-Builder Contributors"}]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
